https://numworx.atlassian.net/browse/DWOPLAY-461
init en reset answermodel op -1

git-svn-id: https://svn.science.uu.nl/repos/project.fisme.java/DwoPlayer/GWT/trunk@27347 58dd2db4-0f11-0410-9df4-da15f00f50bd